# subtensor_deprecated

./: Dockerfile  README.md  blocks.blocks  docker-compose.yml  validator_hyperparameters.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: change-a-hyperparameter.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/rpool/: Cargo.toml
pallets/rpool/src/: lib.rs  registration.rs
pallets/rpool/tests/: mock.rs  registration.rs  serving.rs  step.rs  sudo.rs  weights.rs
pallets/subtensor/: Cargo.toml
pallets/subtensor/src/: lib.rs  registration.rs  step.rs  weights.rs
pallets/subtensor/tests/: mock.rs  staking.rs  sudo.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: create_snapshot_hourly.sh
specs/: nakamotoChainSpec.json  nakamotoChainSpecRaw.json  nobunagaSpec.json  nobunagaSpecRaw.json  validator_hyperparameters.md
